@@ -9,6 +9,10 @@ Major changes since man-db 2.6.4:
 	o man's --warnings option works again on systems with versions of
 	  groff that support it.
 
+	o man automatically falls back to C.UTF-8 and then en_GB.UTF-8 if
+	  trying to find a UTF-8 locale on a system without
+	  /usr/share/i18n/SUPPORTED.
+
 man-db 2.6.4 (23 June 2013)
 ===========================
 
